--- a/src/main/resources/templates/content/admin/boardList.html
+++ b/src/main/resources/templates/content/admin/boardList.html
@@ -35,7 +35,7 @@
         <main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
             <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h2>나눔글 관리</h2>
+                    <h2 class="text-center">나눔글 관리</h2>
             </div>
             <div>
                 <!-- 검색창 -->
