--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -18,7 +18,7 @@
         <div>
             <a class="navbar-brand" th:href="@{/user/mypage/myinfor}">
                 <img th:src="@{/images/bookmark.png}" alt="Points" width="30px" height="30px">
-                <div id="totalPointContainer" style="display: inline-block;"></div>
+                <div th:if="${#authorization.expression('isAuthenticated()')}" id="totalPointContainer" style="display: inline-block;"></div>
             </a>
             <a class="navbar-brand">
                 <img th:src="@{/images/alarm.png}" alt="Alarm" width="30px" height="30px" onclick="toggleDropdown('notificationDropdownMenu')">
