자동배포 확인

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                   <div class="card" style="border-radius: 1rem; background-color: white; width: 30%;">
                         <div class="card-body p-3 text-center">
                             <h2 class="mt-3">LOGIN</h2>
-                            <p class="mt-2 mb-2">서비스를 사용하려면 로그인을 해주세요</p>
+                            <p class="mt-2 mb-2">서비스를 사용하려면 로그인을 해주세요!</p>
                             <hr>
                             <div class="mb-2">
                                 <form action="/user/login" method="POST">
