--- a/src/main/resources/templates/content/board/deleteComplete.html
+++ b/src/main/resources/templates/content/board/deleteComplete.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/defaultLayout}"
+      layout:fragment="content">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>completeTakeBook</title>
+
+    <style>
+        .custom-button {
+            background-color: #E2ECE2;
+            font-size: 18px;
+            color: black;
+            border: 2px solid #E2ECE2;
+            font-weight: bold;
+        }
+    </style>
 </head>
+
 <body>
-삭제 완료
+<!-- Main -->
+<main role="main" class="ml-sm-auto px-md-4" style="height: auto; min-height: 100%; margin-bottom: 50px; display: flex; flex-direction: column;">
+    <div class="main-container border rounded p-3 mt-2" style="flex: 1;"> <!-- 메인컨텐츠 주변 보더라인 잡기-->
+        <div style="text-align: center; margin-top: 100px;">
+            <h1>나눔글 삭제가 완료되었습니다!</h1>
+            <br>
+            <a class="custom-button btn btn-primary" th:href="@{/main/}">메인으로 돌아가기</a>
+        </div>
+    </div>
+</main>
 </body>
 </html>
