--- a/src/main/resources/templates/content/mypage/giveList.html
+++ b/src/main/resources/templates/content/mypage/giveList.html
@@ -66,34 +66,29 @@
                             <div class="col-md-4">
                                 <div class="card mb-3">
                                     <a th:href="@{'/board/detail/' + ${board.boardId}}">
-                                        <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" th:alt="${book.title}" width="200" height="300">
+                                        <img class="card-img-top" th:src="${book.imagesList[0].imagesUrl}" th:alt="${book.title}" width="150" height="225">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <h5 class="card-title" th:text="${book.title}">책 제목</h5>
-                                            <p th:text="'출판사: ' + ${book.publisher}">출판사: 출판사명</p>
+                                    <h4 class="card-title" th:text="${book.title}">책 제목</h4>
+                                    <p th:text="'출판사: ' + ${book.publisher}">출판사: 출판사명</p>
+                                    <p th:text="'글 올린 날짜: ' + ${board.getCreatedDate()}">글 올린 날짜: 날짜</p>
+                                    <p th:text="'책 등급: ' + ${book.grade}">책 등급: 등급</p>
+                                </div>
+
+                                <div class="col-md-4">
+                                    <div th:if="${book.transactions.status.toString() == '신규등록'}">
+                                        <div class="status-box">
+                                            <a th:href="@{/board/update/{boardId}(boardId=${board.boardId})}">수정 하기</a>
                                         </div>
-                                        <div class="col-md-4">
-                                            <p th:text="'글 올린 날짜: ' + ${book.pubDate}">글 올린 날짜: 날짜</p>
-                                            <p th:text="'책 등급: ' + ${book.grade}">책 등급: 등급</p>
+                                        <div class="status-box">
+                                            <a th:href="@{/board/delete/{boardId}(boardId=${board.boardId})}" onclick="deleteBoard(${board.boardId})">삭제 하기</a>
                                         </div>
-                                        <div class="col-md-4">
-                                            <div th:if="${book.transactions.status.toString() == '신규등록'}">
-                                                <div class="status-box">
-                                                    <a th:href="@{/board/update/{boardId}(boardId=${board.boardId})}">수정 하기</a>
-                                                </div>
-                                                <div class="status-box">
-                                                    <a th:href="@{/board/delete/{boardId}(boardId=${board.boardId})}" onclick="deleteBoard(${board.boardId})">삭제 하기</a>
-                                                </div>
-                                            </div>
-                                            <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;">
-                                                <span th:unless="${book.transactions.status.toString() == '신규등록'}" th:text="${book.transactions.status}"></span>
-                                            </div>
-                                        </div>
+                                    </div>
+                                    <div style="background-color: #E2ECE2; border: 1px solid #E2ECE2; border-radius: 20px; color: black; font-size: 14px; padding: 5px 10px; pointer-events: none; display: inline-block;">
+                                        <span th:unless="${book.transactions.status.toString() == '신규등록'}" th:text="${book.transactions.status}"></span>
                                     </div>
                                 </div>
                             </div>
